--- a/public/index.html
+++ b/public/index.html
@@ -23,18 +23,16 @@
 
     <!--script src="js/resize.js"></script-->
 
-    <!--
     <script src="https://rawgit.com/eligrey/FileSaver.js/master/FileSaver.js"></script>
     <script src ="https://rawgit.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js"></script>
-    <script>
-        function save_image(){
+    <!--script>
+        function localandS3save(){
             // Dump the canvas contents to a file.
             var canvas = document.getElementById("cv");
             canvas.toBlob(function(blob) {
-                saveAs(blob, "output.png");
-            }, "image/png");
-        };
-    </script>--> <!--save image for png jQuery-->
+                saveAs(blob, "output.png"); }, "image/png");
+        }
+    </script>-->
 
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
@@ -56,7 +54,7 @@
         <input id = 'clear' type="image" src="image/buttons/clear.png" height="27px"/>
 
         <!--button id = 'get' onClick="load();">get</button-->
-        <!--button id = 'save' onClick="save();">save</button-->
+        <input id = 'save' type="image" src="image/buttons/save.png" height="27px" onClick="localandS3save();">
 
         <!--a href="#" class="button" id="btn-download" download="#">Download</a-->
 
